# DeepFakeCapstone

./: README.md  pyproject.toml
sandbox/EmmaTests/: GerdemanTest.py
sandbox/LaneTests/: AffieldTest.py
sandbox/MunachiTests/: OkuaguTest.py
